# modern-python-app-template

./: Makefile  README.md  cookiecutter.json  main.py  makefile  pyproject.toml
.github/workflows/: python-build.yml
.history/example-project/: Makefile_20241211132622
.history/{{cookiecutter.module_name}}/: .pre-commit-config_20241211145306.yaml  .pre-commit-config_20241211145343.yaml
app/: hoge.py
docs/source/: conf.py
example-project/: Makefile  README.md  pyproject.toml
example-project/docs/source/: conf.py
example-project/example_project/: __main__.py  hoge.py
example-project/tests/: test_hoge.py
example_project/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  hoge.py  mkdocs.yml  pyproject.toml
example_project/.github/workflows/: python-build.yml
example_project/docs/: index.md
example_project/docs/api/: hoge.md
example_project/docs/source/: conf.py
example_project/example_project/: settings.py
example_project/notebooks/: fuga.ipynb
tests/: test_hoge.py
{{cookiecutter.module_name}}/: .gitignore  Dockerfile  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.module_name}}/.github/workflows/: python-build.yml
{{cookiecutter.module_name}}/docs/: index.md
{{cookiecutter.module_name}}/docs/api/: hoge.md
{{cookiecutter.module_name}}/docs/source/: conf.py
{{cookiecutter.module_name}}/notebooks/: fuga.ipynb
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: settings.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/docs/source/: index.rst
{{cookiecutter.project_name}}/notebooks/: fuga.ipynb
{{cookiecutter.project_name}}/tests/: test_hoge.py
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: __main__.py  hoge.py  settings.py
