[project]
name = "example-project"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "mdformat>=0.7.19",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "sphinx>=8.1.3",
]

[tool.mypy]
files = "example_project"

[tool.pytest.ini_options]
addopts = "--cov --cov-branch -s -v"
pythonpath = "app"
testpaths = ["tests"]
