[project]
name = "Example-Project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "pydantic-settings",

]

[dependency-groups]
dev = [
    "mdformat",
    "mypy",
    "pytest-cov",
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pre-commit",
    "nbstripout",
    "jupyterlab",
]

[tool.mypy]
files = "example_project"

[tool.pytest.ini_options]
addopts = "--cov --cov-branch -s -v"
pythonpath = "app"
testpaths = ["tests"]

[tool.setuptools]
packages = ["example_project"]

[tool.setuptools.package-dir]
"example_project" = "example_project"