[project]
name = "Example-Project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "pydantic-settings",

]

[dependency-groups]
dev = [
    "mdformat",
    "pyright",
    "pytest-cov",
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pre-commit",
    "nbstripout",
    "jupyterlab",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["example_project", "notebooks", "tests"]

[tool.pytest.ini_options]
addopts = "--cov --cov-branch -s -vv"
pythonpath = "example_project"
testpaths = ["tests"]
log_file = "logs/pytest.log"

[tool.setuptools]
packages = ["example_project"]

[tool.setuptools.package-dir]
"example_project" = "example_project"