[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "loguru",
    "pydantic-settings",

]

[dependency-groups]
dev = [
    "mdformat",
    "pyright",
    "pytest-cov",
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pre-commit",
    "nbstripout",
    "jupyterlab",
]

[tool.pyright]
pythonVersion = "{{cookiecutter.python_version}}"
include = ["{{cookiecutter.module_name}}", "notebooks", "tests"]

[tool.pytest.ini_options]
addopts = "--cov --cov-branch -s -v"
pythonpath = "{{cookiecutter.module_name}}"
testpaths = ["tests"]

[tool.setuptools]
packages = ["{{cookiecutter.module_name}}"]

[tool.setuptools.package-dir]
"{{cookiecutter.module_name}}" = "{{cookiecutter.module_name}}"